2004-09-26 Roland Clobus <rclobus@bigfoot.com>
	* .cvsignore: Added Makefile.in.in, it is a generated file
	* POTFILES.in: Added client/ai/greedy.c, server/turn.c
	
2004-09-15 Arjen Schrijver <a.schrijver@skydec.nl>
	* nl.po: fixing a typo
	
2004-09-15 Roland Clobus <rclobus@bigfoot.com>
	* ChangeLog: Added the ChangeLog again, it is required for 
	'make distcheck' and automake-1.7