@@ -8,61 +8,42 @@ ai/robber.c
 ai/trade.c
 ai/turn.c
 client/ai/greedy.c
-client/callback.h
-client/common/build.c
-client/common/callback.c
 client/common/chat.c
 client/common/client.c
-client/common/client.h
 client/common/develop.c
-client/common/gnocatan.c
-client/common/i18n.c
 client/common/player.c
 client/common/resource.c
 client/common/robber.c
 client/common/setup.c
-client/common/stock.c
 client/common/turn.c
-client/gtk/frontend.h
-client/gtk/gui.h
-client/gtk/guimap.h
-client/gtk/histogram.h
-client/gtk/polygon.h
-client/gtk/theme.h
-client/gtk/callbacks.c
 client/gtk/chat.c
 client/gtk/connect.c
 client/gtk/develop.c
 client/gtk/discard.c
-client/gtk/frontend.c
 client/gtk/gameover.c
 client/gtk/gold.c
 client/gtk/gui.c
 client/gtk/guimap.c
 client/gtk/histogram.c
-client/gtk/identity.c
 client/gtk/interface.c
 client/gtk/legend.c
 client/gtk/monopoly.c
 client/gtk/name.c
 client/gtk/offline.c
-client/gtk/plenty.c
-client/gtk/polygon.c
 client/gtk/player.c
+client/gtk/plenty.c
 client/gtk/quote.c
 client/gtk/resource.c
 client/gtk/settingscreen.c
-client/gtk/state.c
 client/gtk/theme.c
 client/gtk/trade.c
-common/game-settings.c
+common/gtk/game-settings.c
+common/gtk/select-game.c
 common/log.c
-common/log.h
 common/network.c
-common/select-game.c
 common/state.c
-server/gnocatan-server-gtk.c
 server/gnocatan-server.c
+server/gtk/gnocatan-server-gtk.c
 server/meta.c
 server/player.c
 server/server.c
